--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   <body>
     <h1>Business Cards</h1>
     <div class="attribution">
-      By [your name here]
+      By Aidan N.
     </div>
 
-    <main class="card landscape card-1"></main>
+    <main class="card landscape card-1">
+      <div class="title"><b>Josh's Aura for Sale</b></div>
+      <div class="pricing">100 Points: 1 Dollar</div>
+    </main>
 
     <main class="card landscape card-2"></main>
 
