--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
+  <title>Hello World</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./style.css" />
@@ -14,8 +18,12 @@
     </div>
 
     <main class="card landscape card-1">
-      <div class="title"><b>Josh's Aura for Sale</b></div>
-      <div class="pricing">100 Points: 1 Dollar</div>
+      <div class="josh"><b>Josh's Aura for Sale</b></div>
+      <div class="thousand"><b>1,000 Points: $9.99</b></div>
+      <div class="thousand"><b>2,500 Points: $24.99</b></div>
+      <div class="thousand"><b>5,000 Points: 49.99</b></div>
+      <div class ="sale">Sale: 10,000 Points for <u>ONLY</u> $79.99</div>
+      <div class = call><b>Call Now: 978-131-2008</b></div>
     </main>
 
     <main class="card landscape card-2"></main>
