started second card, finished first one

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -22,11 +23,34 @@
       <div class="thousand"><b>1,000 Points: $9.99</b></div>
       <div class="thousand"><b>2,500 Points: $24.99</b></div>
       <div class="thousand"><b>5,000 Points: 49.99</b></div>
-      <div class ="sale">Sale: 10,000 Points for <u>ONLY</u> $79.99</div>
+       <img class="gaka" src="https://i.ibb.co/hH8VgRk/Firefly-A-man-named-Joshua-Lopes-around-17-years-of-age-with-a-cloud-of-mysterious-aura-behind-him.jpg" alt="Firefly-A-man-named-Joshua-Lopes-around-17-years-of-age-with-a-cloud-of-mysterious-aura-behind-him" border="0">
       <div class = call><b>Call Now: 978-131-2008</b></div>
+   
+      
     </main>
 
-    <main class="card landscape card-2"></main>
+  
+    <!-- HTML generated with Hinkle's flexbox code generator -->
+  <main class="card landscape card-2">
+  <div> Words
+    <!-- child 1 content here -->
+  </div>
+  <div> <!-- could be any element -->
+    <!-- child 2 content here -->
+    <div> <!-- could be any element -->
+        <!-- grandchild 1 content here -->
+    </div>
+    <div> <!-- could be any element -->
+        <!-- grandchild 2 content here -->
+    </div>
+    <div> <!-- could be any element -->
+        <!-- grandchild 3 content here -->
+    </div>
+  </div>
+  <div> <!-- could be any element -->
+    <!-- child 3 content here -->
+  </div>
+</main>
 
     <!-- Delete the cards below if not
      doing "honors" assignment -->
