changed a few things in card 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    
+
   <title>Hello World</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,23 +32,22 @@
   
     <!-- HTML generated with Hinkle's flexbox code generator -->
   <main class="card landscape card-2">
-  <div> Words
+  <div class ="flex-container"> Nunya B's Wax
     <!-- child 1 content here -->
   </div>
-  <div> <!-- could be any element -->
-    <!-- child 2 content here -->
+  <div class ="flex-container"> Now Hiring
     <div> <!-- could be any element -->
         <!-- grandchild 1 content here -->
     </div>
-    <div> <!-- could be any element -->
+    <div class ="flex-container">
         <!-- grandchild 2 content here -->
     </div>
     <div> <!-- could be any element -->
         <!-- grandchild 3 content here -->
     </div>
   </div>
-  <div> <!-- could be any element -->
-    <!-- child 3 content here -->
+  <div class ="flex-container">
+    Order Online: 978-131-2008
   </div>
 </main>
 
