--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   
     <!-- HTML generated with Hinkle's flexbox code generator -->
   <main class="card landscape card-2">
-  <div class ="flex-container"> Nunya B's Wax
-    <!-- child 1 content here -->
+  <div class ="flex-container"> <b>Nunya B's Wax</b>
   </div>
   <div class ="flex-container"> Now Hiring
     <div> <!-- could be any element -->
@@ -42,17 +41,17 @@
     <div class ="flex-container">
         <!-- grandchild 2 content here -->
     </div>
-    <div> <!-- could be any element -->
+    <div> 
         <!-- grandchild 3 content here -->
     </div>
   </div>
   <div class ="flex-container">
     Order Online: 978-131-2008
   </div>
+  <img class="aditya"src="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&amp;content_type=image%2Fpng&amp;attachment_token=AOo0EEXKxCvR43hqD3shMMn9SteuhQISt3nZDb7ohQrPc4lKArAhQ4xYY6lD%2FzMLPCTFO032prmD02vVEzHO%2FNq8xQRE6zaKiS43UjKFM8wDSnW%2BRy67upnISDu7ErIF21QKzQtwpr4dzWhjICi4Me6%2F1k4HRxahJZFB2b5b5BGvLNWP5kCbr6HGcXvl%2B4aLSUN%2FDn2w%2FXKQvw2eL8ZF%2FnuhxqixAWW5QKt5KJM7wMqpBL2cxm8tZyJej7a%2B7RPxmRSvVGrrjf7rDIlGa5AxinGAKLvnqE%2FCRcxFMJVmNR8fTB04K1AY29OcG1piHVqiZLvNLeV2HCgfSbiA2dSQ0NdVrULndo4zrZS98hBh8eglRInSq4Wks%2B5i0nzDnVwycqeo288LFvXbdiuzvbYMcHpP%2FTqzNp0%2FRrk0YhnOL1fjrVX4tRcP4e5i5ir8snMYiCHfTJyHhWJRqMYmySAwoCevAif4jzefz%2FpMr6BdYCdTfMRX11aYonF5x%2B3C7pV%2FD9jKg796kaVc%2FHzW%2FRe%2BY%2BE%2FJG2%2FMZQBTEhnPcb8GjpQCWShygnAaVzGZQL6o5AmtCxOtQk%3D&amp;sz=w512" alt="image.png"/>
+<div class="bottom"> Aditya Patel,CEO</div>
 </main>
 
-    <!-- Delete the cards below if not
-     doing "honors" assignment -->
 
     <main class="card portrait card-3"></main>
 
@@ -61,8 +60,7 @@
     <div>
       <h4>Sources</h4>
       <ul>
-        <li>List sources for 
-          images, etc. here
+        <li>Credit to adobe firefly for the AI-generated image! (On the first business card).
         </li>
       </ul>
     </div>
